--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/signup.css">
     <title>SignUp</title>
@@ -10,11 +11,11 @@
 <body>
     <!-- Nav -->
     <nav>
-        <a href="../templates/index.html">Home</a>
+        <a href="../templates/index.html">Home <i class="fa fa-user" aria-hidden="true"></i></a>
         <a href="../templates/signup.html">Signup</a>
     </nav>
     <!-- Content -->
-     <div class="button">This is a button</div>
+     <div class="button">This is a button <i class="fa fa-user" aria-hidden="true"></i></div>
 </body>
 <script src="../js/index.js"></script>
 <script src="../js/signup.js"></script>
