--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <title>Document</title>
 </head>
 <body>
     <!-- Nav -->
     <nav>
-        <a href="../templates/index.html">Home</a>
+        <a href="../templates/index.html">Home <i class="fa fa-user" aria-hidden="false"></i></a>
         <a href="../templates/signup.html">Signup</a>
     </nav>
     <!-- Content -->
-    <p>Example Text</p>
+    <p>Example Text <i class="fa fa-user" aria-hidden="false"></i></p>
 </body>
 <script src="../js/index.js"></script>
 </html>
