--- a/templates/cinnamonOrange.html
+++ b/templates/cinnamonOrange.html
@@ -13,9 +13,11 @@
 <body>
     <div class="Item-pic-price">
         <div class="pic">
-            <img src="../static/CinnamonOrange.png" >
+            <img src="../static/CinnamonOrange.png" > 
+            <!-- main image -->
         </div>
         <div class="price">
+            <!-- details -->
             <h3>CINNAMON ORANGE GREEN TEA</h3>
             <p>15.00$</p>
             <form id="priceForm">
@@ -43,6 +45,7 @@
 
 
     <div class="description">
+        <!-- this will also change dynamically -->
         <h5>Description:</h5>
         <p>An energizing blend based around the eternally uplifting flavors of cinnamon and orange. (100 grams makes 65 mugs)</p>
         <h5>How to prepare?</h5>
@@ -56,6 +59,7 @@
 
 
     <div class="recomended">
+        <!-- supposed to be done by saja -->
         <h3 >YOU MIGHT ALSO LIKE</h3>
     </div>    
     
@@ -125,4 +129,7 @@
     
     
 </body>
+<script src="../js/item.js">
+
+</script>
 </html>
