--- a/templates/cart.html
+++ b/templates/cart.html
@@ -46,20 +46,7 @@
           </div>
         </div>
       </nav>
-    <!-- Content: Manar -->
-    <p>Example Text <i class="fa fa-user" aria-hidden="false"></i></p>
-    <div class="rec-item">
-    <div class="product">
-        <div class="rec-product-img">
-            <a href="../templates/tumericMatcha.html"><img src="../static/Turmeric_Matcha_1.png" ><br></a>
-        
-        </div>
-        <div class="rec-product-info">
-            <p>TUMERIC MATCHA</p><br>
-            <p>15.00$</p>  
-        </div>
-        </div>
-    </div>
+    <!-- Content: Sari -->
 </body>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
