--- a/templates/tumericMatcha.html
+++ b/templates/tumericMatcha.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +37,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
+                <a class="nav-link active" href="./cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
             </li>
             </ul>
             <form class="d-flex">
@@ -47,6 +47,7 @@
           </div>
         </div>
       </nav>
+      <!-- Content: Ali and Saja -->
     <div class="Item-pic-price">
         <div class="pic">
             <img src="../static/Turmeric_Matcha_1.png" >
@@ -159,6 +160,6 @@
     
     
 </body>
-<script src="../js//item.js"></script>
+<script src="../js/item.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
