--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -46,10 +46,7 @@
           </div>
         </div>
       </nav>
-    <!-- Content: Sari -->
-     <div class="container mt-5">
-        <a href="./checkout.html" class="btn btn-outline-primary "> CheckOut </a>
-     </div>
+    <!-- Content: karen -->
 </body>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
