--- a/templates/item_view.html
+++ b/templates/item_view.html
@@ -53,8 +53,8 @@
             <img src="../static/Turmeric_Matcha_1.png" >
         </div>
         <div class="price">
-            <h3>TURMERIC MATCHA</h3>
-            <p>15.00$</p>
+            <h3 id="main_item">TURMERIC MATCHA</h3>
+            <p id="main_price">15.00$</p>
             <form id="priceForm">
                 <div class="size-input">
                     
