--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -39,10 +39,10 @@
                 <a class="nav-link active" href="./cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
             </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <div class="d-flex">
+              <input id="serachbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit" onclick="search()">Search</button>
+            </div>
           </div>
         </div>
       </nav>
