--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,7 @@
         </div>
         </div>
     </div>
+    <p>my name is zainab</p>
 </body>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
