--- a/templates/item_view.html
+++ b/templates/item_view.html
@@ -59,7 +59,12 @@
                 <div class="size-input">
                     
                     <label for="size">SIZE:</label>
-                    <input type="number" name="size" id="size" placeholder="eg.100g">
+                    <select id="size" name="size">
+                        <option value="Select" disabled>Select a Size</option>
+                        <option value="50">50g</option>
+                        <option value="100">100g</option>
+                        <option value="200">200g</option>
+                    </select>
                 </div>
                     
                 <div class="quantity-input">
