--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,11 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="container">
+        <p><i class="fa fa-twitter"></i> Follow</p>
+    </div>
+</footer>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
