--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/Item.css">
+    <link rel="stylesheet" href="../css/checkout.css">
     <title>Document</title>
 </head>
 <body>
@@ -46,7 +47,70 @@
           </div>
         </div>
       </nav>
-    <!-- Content: karen -->
+      <div class="container">
+           <form>
+               <div class="row">
+                  <div class="col1">
+                       <h3 class="title">Billing Address</h3>
+                <div class="inputBox">
+                    <label>Full name :</label>
+                    <input type="text" required>
+                </div>
+                <div class="inputBox">
+                    <label>Email :</label>
+                    <input type="email" placeholder="example@example.com" required>
+                </div>
+                <div class="inputBox">
+                    <label>Address :</label>
+                    <input type="text" id="add" placeholder="room - street - locality" required>
+                </div>
+                <div class="inputBox">
+                    <label>City :</label>
+                    <input type="text" placeholder="Los Angeles" required >
+                </div>
+                <div class="flex">
+                    <div class="inputBox">
+                        <label>State :</label>
+                        <input type="text" placeholder="California" required>
+                    </div>
+                    <div class="inputBox">
+                        <label>Zip code :</label>
+                        <input type="text" placeholder="123 456" required>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col2">
+                <h3 class="title">Payment</h3>
+                <div class="inputBox">
+                    <label>Name on card :</label>
+                    <input type="text" >
+                </div>
+                <div class="inputBox">
+                    <label>Credit card number :</label>
+                    <input type="number" placeholder="1111-2222-3333-4444" required>
+                </div>
+                <div class="flex">
+                    <div class="inputBox">
+                        <label>Expiry date :</label>
+                        <input type="date"  required>
+                    </div>
+                    <div class="inputBox">
+                        <label>CVV :</label>
+                        <input type="text" placeholder="1234" required>
+                    </div>
+                    <div>
+                        <label>Total Amount:</label>
+                        <p id="amount"></p>
+                    </div>
+                    <input type="submit" value="Proceed to checkout" class="submit-btn">
+                </div>
+            </div>
+        </div>
+    </form>
+    
+</div>    
+<script src="../js/checkout.js"></script> 
 </body>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
