--- a/css/checkout.css
+++ b/css/checkout.css
@@ -12,7 +12,7 @@
     align-items: center;
     padding: 25px;
     min-height: 100vh;
-    background-color: #a68a64; 
+    background-color:#ffffffec; 
 }
 
 .container form {
