--- a/css/checkout.css
+++ b/css/checkout.css
@@ -15,54 +15,56 @@
     background-color:#ffffffec; 
 }
 
-.container form {
+.container form{
     padding: 20px;
     width: 100%;
     max-width: 700px;
     background: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 10px rgba(0, 0,0,0.3);
     border-radius: 10px;
 }
 
 .title {
     color:#8aa387;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top:20px;
     text-align: center;
     font-size: 1.5em;
 }
 
 label {
     display: block;
-    color: rgb(30, 29, 29);
+    color: rgb(30, 29,29);
     font-weight: 600;
     margin-bottom: 5px;
 }
 
+
 .row {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items:stretch;
     margin-bottom: 20px;
 }
 
 .col1, .col2 {
-    width: 100%;
+    width: 100% ;
 }
 
 .inputBox {
     width: 100%;
 }
 
-input, textarea, select {
+input, textarea, select{
     width: 100%;
-    padding: 10px;
+    padding:10px;
     margin: 5px 0;
-    border: 3px solid #ddd;
+    border:3px solid #ddd;
     border-radius: 5px;
     font-size: 1em;
 }
 
-input[type="submit"] {
+input[type="submit"]{
     width: 100%;
     padding: 12px;
     font-size: 1.2em;
@@ -85,3 +87,38 @@ input[type="submit"]:hover {
     text-align: right;
 }
 
+.methods{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 5px; 
+    padding: 10px;
+    border: 3px solid #ddd;
+    border-radius: 5px;
+    background-color: #ffffffec;
+    margin: 0 8px 9px 0px; 
+    padding-left: 20px; 
+    box-sizing: border-box; 
+}
+
+.method{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    padding: 5px; 
+}
+
+.method img {
+    height: 60px; 
+    width: auto;
+    margin-bottom: 5px; 
+    margin:8px;
+}
+
+.method label {
+    font-size: 14px; 
+    margin-bottom: 5px;
+}
+
+.method input[type="radio"] {
+    margin-top: 5px;
+}
