--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </body>
-<footer>
+<footer style="background-color: black;">
     <div class="container">
         <p><i class="fa fa-twitter"></i> Follow</p>
     </div>
