--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,11 @@
     <!-- Content -->
      <div class="button">This is a button <i class="fa fa-user" aria-hidden="true"></i></div>
 </body>
+<footer>
+    <div class="container">
+        <p><i class="fa fa-twitter"></i> Follow</p>
+    </div>
+  </footer>
 <script src="../js/index.js"></script>
 <script src="../js/signup.js"></script>
 </html>
