--- a/css/checkout.css
+++ b/css/checkout.css
@@ -6,7 +6,7 @@
     transition: all .2s linear;
 }
 
-.container {
+.container_override {
     display: flex;
     justify-content: center;
     align-items: center;
