--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,96 @@
   --lion: #a68a64;
   --dark-moss-green: #556b2f;
   --paynes-gray: #3a606e;
+  --white: #ffffffec;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: var(--beige);
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  background-color: var(--white);
+}
+
+main {
+  flex: 1;
 }
 
 p {
     font-family: 'Times New Roman', Times, serif;
     font-size: 2rem;
+}
+
+.homePage-list h1 {
+  text-align: center;
+  margin-top: 30px;
+  color: #3A606E;
+}
+
+#teaList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+#teaList h2 {
+  font-size: 35px;
+  text-align: center;
+  color: #3A606E;
+}
+
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 30px;
+  border: 1px solid #556b2f;
+  border-radius: 10px;
+}
+
+.items img {
+  margin: 50px;
+}
+
+.items img:hover {
+  width: 260px;
+}
+
+.name {
+  position: relative;
+  top: 153px;
+  font-size: 20px;
+  color: #3A606E;
+}
+
+.price {
+  margin-left: 20px;
+  font-size: 21px;
+  color: #3A606E;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+#serachbar {
+  border-radius: 20px;
+}
+
+.navbar-nav .nav-item .nav-link {
+  font-size: 1.2em; 
+  margin-right: 25px;
+  margin-left: 25px; 
+  color:#f5f5dc !important;
 }
