--- a/templates/cart.html
+++ b/templates/cart.html
@@ -41,7 +41,7 @@
             </ul>
             <div class="d-flex">
               <input id="serachbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit" onclick="search()">Search</button>
+              <button class="btn btn-success" type="submit" onclick="search()">Search</button>
             </div>
           </div>
         </div>
@@ -51,6 +51,11 @@
         <a href="./checkout.html" class="btn btn-outline-primary "> CheckOut </a>
      </div>
 </body>
+<footer>
+  <div class="container">
+      <p><i class="fa fa-twitter"></i> Follow</p>
+  </div>
+</footer>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
