--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/Item.css">
+    <link rel="stylesheet" href="../css/cart.css">
     <title>Document</title>
 </head>
 <body>
@@ -47,9 +47,29 @@
         </div>
       </nav>
     <!-- Content: Sari -->
-     <div class="container mt-5">
-        <a href="./checkout.html" class="btn btn-outline-primary "> CheckOut </a>
-     </div>
+  <div class="container mt-5">
+    <h2>Your Cart</h2>
+    <div id="cartItems">
+        <!-- Cart items will be dynamically added here -->
+    </div>
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <button id="clearCartBtn" class="btn btn-warning">Clear Cart</button>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Order Summary</h5>
+                    <p>Subtotal: $<span id="subtotal">0.00</span></p>
+                    <p>Discount: $<span id="discount">0.00</span></p>
+                    <p>Delivery & Taxes: $<span id="deliveryTaxes">0.00</span></p>
+                    <h6>Final Total: $<span id="finalTotal">0.00</span></h6>
+                    <a href="./checkout.html" id="checkoutBtn" class="btn btn-primary">Proceed to Checkout</a>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
 </body>
 <footer>
   <div class="container">
@@ -57,6 +77,7 @@
   </div>
 </footer>
 <script src="../js/index.js"></script>
+<script src="../js//cart-page.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </html>
