--- a/templates/cart.html
+++ b/templates/cart.html
@@ -47,7 +47,7 @@
         </div>
       </nav>
     <!-- Content: Sari -->
-  <div class="container mt-5">
+  <div class="container mt-5 mb-5">
     <h2>Your Cart</h2>
     <div id="cartItems">
         <!-- Cart items will be dynamically added here -->
