--- a/templates/ category_view.html
+++ b/templates/ category_view.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <title>Order</title>
+    <title>Category</title>
 </head>
 <body>
     <!-- Nav --> 
@@ -34,6 +34,8 @@
                   <li><a class="dropdown-item" href="#">Logout <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
                 </ul>
               </li>
+              <p id="temp"></p>
+              
               <li class="nav-item">
                 <a class="nav-link active" href="./cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
             </li>
@@ -45,11 +47,13 @@
           </div>
         </div>
       </nav>
-      <!-- Content -->
-       <div class="container">
-            <h2>Looks like you have Reached the end! <br> There is actually nothing here. Maybe we will implement an invoice print pdf thing <br> and have it be embedded in the html, but that's it for now :3</h2>
-            <a href="./index.html" class="btn btn-success">Go Back</a>
-       </div>
+
+    <!-- Content: Manar -->
+
+    <div>
+        <!-- content will be loaded dynamically here -->
+    </div>
+    
 </body>
 <footer>
     <div class="container">
