--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/Item.css">
     <link rel="stylesheet" href="../css/checkout.css">
-    <title>Document</title>
+    <title>Checkout</title>
 </head>
 <body>
     <!-- Nav -->
