--- a/templates/payByCard.html
+++ b/templates/payByCard.html
@@ -6,11 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/order.css">
-    <title>Order</title>
+    <link rel="stylesheet" href="../css/Item.css">
+    <link rel="stylesheet" href="../css/checkout.css">
+    <title>Document</title>
 </head>
 <body>
-    <!-- Nav --> 
+    <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
@@ -41,28 +42,54 @@
             </ul>
             <div class="d-flex">
               <input id="serachbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-success" type="submit" onclick="search()">Search</button>
+              <button class="btn btn-outline-success" type="submit" onclick="search()">Search</button>
             </div>
           </div>
         </div>
       </nav>
-      <!-- Content -->
-       <div class="container">
-            <h2>Looks like you have Reached the end! <br> There is actually nothing here. Maybe we will implement an invoice print pdf thing <br> and have it be embedded in the html, but that's it for now :3</h2>
-            <a href="./index.html" class="btn btn-success">Go Back</a>
-       </div>
-       <div class="container">
-        <img src="../static/checked.png" alt="Order Completed">
-        <h1>Order Is Completed!</h1>
-        <p>Thank you for your purchase. Your order has been successfully placed.</p>
+
+    <h3 class="title">Payment</h3>
+
+    <div class="container">
+        <form id="complete">
+            <div class="col2">
+                <div class="inputBox">
+                    <label>Name on card :</label>
+                    <input type="text" required>
+                </div>
+                <div class="inputBox">
+                    <label>Credit card number :</label>
+                    <input type="number" placeholder="1111-2222-3333-4444" required>
+                </div>
+                <div class="flex">
+                    <div class="inputBox">
+                        <label>Expiry date :</label>
+                        <input type="date" required>
+                    </div>
+                    <div class="inputBox">
+                        <label>CVV :</label>
+                        <input type="text" placeholder="1234" required>
+                    </div>
+                </div>
+            </div>
+            <div class="col2">
+                <label>Total Amount:</label>
+                <p id="amount"></p>
+            </div>
+            <input type="submit" value="Checkout">
+        </form>
     </div>
+    <script>
+        document.getElementById("complete").addEventListener('submit',function(event){
+            event.preventDefault(); 
+            window.location.href= 'orderComplete.html';
+        });
+    </script>
+    <script src="../js/checkout.js"></script> 
 </body>
 <footer>
     <div class="container">
         <p><i class="fa fa-twitter"></i> Follow</p>
     </div>
 </footer>
-<script src="../js/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </html>
